adds api end point to get secondary ids